sectionRowIndex must return -1 when its parent is not a table, tbody, thead, or tfoot https://bugs.webkit.org/show_bug.cgi?id=148841 <rdar://problem/22586870>

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline W3C HTML test now that more checks are passing.

* web-platform-tests/html/semantics/tabular-data/the-tr-element/sectionRowIndex-expected.txt:

Source/WebCore:

Update HTMLTableRowElement.sectionRowIndex to match the specification:
https://html.spec.whatwg.org/multipage/tables.html#dom-tr-sectionrowindex

In particular, it now returns -1 if the parent is not a table, tbody,
thead and tfoot.

No new tests, already covered by existing test.

* html/HTMLTableRowElement.cpp:
(WebCore::HTMLTableRowElement::sectionRowIndex):


Canonical link: https://commits.webkit.org/167754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190337 268f45cc-cd09-0410-ab3c-d52691b4dbfc